Enhance Timesheet Service with New Features and Improvements
This commit introduces several enhancements to the Timesheet Service, including the addition of new endpoints and improved error handling. It also refactors existing code for better readability and maintainability, ensuring a more robust service overall.